# ERP_System

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BUILD_PLAN.md  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  secure-erp-demo.html
backend/: .semgrep.yml  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/core/: exceptions.py  permissions.py
backend/core/aggregation/: services.py  urls.py  views.py
backend/core/aggregation/tests/: test_aggregation.py
backend/core/dashboard/: urls.py  views.py
backend/core/dashboard/tests/: test_dashboard.py
backend/core/db/: rls.py
backend/core/health/: views.py
backend/core/health/tests/: test_health.py
backend/core/management/commands/: seed_all.py
backend/modules/ai/: apps.py
backend/modules/ai/application/: providers.py  public.py  services.py
backend/modules/ai/interfaces/: serializers.py  urls.py  views.py
backend/modules/ai/tests/: test_ai.py
backend/modules/announcements/: apps.py  models.py
backend/modules/assets/: apps.py  models.py
backend/modules/attachments/: apps.py  models.py
backend/modules/attendance/: apps.py  models.py
backend/modules/compliance/: apps.py  models.py
backend/modules/contracts/: apps.py  models.py
backend/modules/documents/: apps.py  models.py
backend/modules/events/: apps.py  models.py
backend/modules/finance/: apps.py  models.py
backend/modules/fleet/: apps.py  models.py
backend/modules/gis/: apps.py  models.py
backend/modules/helpdesk/: apps.py  models.py
backend/modules/iam/: apps.py  models.py
backend/modules/incidents/: apps.py  models.py
backend/modules/inventory/: apps.py  models.py
backend/modules/knowledge/: apps.py  models.py
backend/modules/leave/: apps.py  models.py
backend/modules/meetings/: apps.py  models.py
backend/modules/operations/: apps.py  models.py
backend/modules/payroll/: apps.py  models.py
backend/modules/performance/: apps.py  models.py
backend/modules/personnel/: apps.py  models.py
backend/modules/procurement/: apps.py  models.py
backend/modules/projects/: apps.py  models.py
backend/modules/recruitment/: apps.py  models.py
backend/modules/risk/: models.py
backend/modules/training/: apps.py  models.py
backend/modules/workspaces/: apps.py  models.py
(+443 files in other folders)
