[project]
name = "erp-backend"
version = "0.1.0"
description = "Secure Institutional Management System — backend"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<5.2",
    "djangorestframework>=3.15,<3.16",
    "psycopg[binary]>=3.2,<3.3",
    "django-environ>=0.11,<0.12",
    "django-cors-headers>=4.4,<5",
    "django-csp>=3.8,<4",
    "django-redis>=5.4,<6",
    "celery>=5.4,<5.5",
    "redis>=5.0,<6",
    "argon2-cffi>=23.1",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "factory_boy>=3.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs>=5.1",
    "djangorestframework-stubs>=3.15",
    "bandit[toml]>=1.7",
    "semgrep>=1.85",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This is an application, not a library; no package auto-discovery needed.
py-modules = []

# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "DJ", "C4", "SIM"]
ignore = ["S101"]  # assert used in tests

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S105", "S106", "S107"]  # hardcoded test passwords are fine
"conftest.py" = ["S105", "S106", "S107"]

# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
warn_unused_ignores = false
exclude = ['migrations/', '/tests/', 'conftest\.py']

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "tests_*.py"]
addopts = "--cov=modules --cov=core --cov-report=term-missing --cov-fail-under=80"
testpaths = ["modules", "core"]

[tool.coverage.run]
branch = true
omit = ["*/migrations/*", "*/tests/*", "config/*", "*/management/*"]

# ----------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["./.venv", "*/tests/*", "*/migrations/*"]
